--- a/friendflix-app/src/theme/variables.scss
+++ b/friendflix-app/src/theme/variables.scss
@@ -74,4 +74,12 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+   /** neutro **/
+  --ion-color-neutro: #e3e1dc;
+  --ion-color-neutro-rgb: 244, 244, 244;
+  --ion-color-neutro-contrast: #000000;
+  --ion-color-neutro-contrast-rgb: 0, 0, 0;
+  --ion-color-neutro-shade: #d7d8da;
+  --ion-color-neutro-tint: #f5f6f9;
 }
