--- a/friendflix-app/src/app/friendflix-home/friendflix-home.page.html
+++ b/friendflix-app/src/app/friendflix-home/friendflix-home.page.html
@@ -7,9 +7,10 @@
 <ion-content>
 	<ion-card class="welcome-card">
 		<ion-card-header>
-			<ion-card-title>{{dadosPost.nome_do_usuario}}</ion-card-title>
+			<ion-card-title>{{dadosPost.nomeDoUsuario}}</ion-card-title>
 			<ion-card-subtitle>{{dadosPost.comentario}}</ion-card-subtitle>
-			<ion-icon name="star" color='{{like_star(dadosPost.Curtir_Discurtir.quantidade_like,dadosPost.Curtir_Discurtir.quantidade_dislike)}}'></ion-icon>
+			<ion-icon size="large" name="thumbs-up" (click)="like(dadosPost)" color="{{dadosPost.curtirDiscurtir.botaoLike ? 'success' : 'dark'}}"></ion-icon>
+			<ion-icon size="large" name="thumbs-down" (click)="unlike(dadosPost)" color="{{dadosPost.curtirDiscurtir.botaoDislike ? 'danger' : 'dark'}}"></ion-icon>
 		</ion-card-header>
 	</ion-card>
 </ion-content>
